--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Saffat Hasan <saffathasan@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pdflatex = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
