--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pdflatex = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+autopep8 = "^1.5.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
