--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Saffat Hasan <saffathasan@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pdflatex = "^0.1.3"
+jinja2 = "^2.11.2"
+pyyaml = "^5.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
