--- a/resources/data.yml
+++ b/resources/data.yml
@@ -7,6 +7,9 @@ contact:
     zip: 19104
 
 education:
+  name: Drexel University
+  location: Philadelphia, PA
+  graduation: Dec 2020
   gpa: 3.55
 
 experience:
