--- a/resources/data.yml
+++ b/resources/data.yml
@@ -8,6 +8,7 @@ contact:
   phone: (347) 604-5831
   email: saffathasan@gmail.com
   repo: gitlab.com/saffathasan
+  linkedin: linkedin.com/in/saffat-hasan
 
 education:
   - name: Drexel University
