default to regular resume

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ generate-pdf-2:
   stage: build
   image: blang/latex:ubuntu
   script:
+    - cp archive/mcdowellcv.cls dist
     - cd dist
     - lualatex output.tex
   artifacts:
