--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ generate-source:
   stage: generate-source
   image: python:3.8
   script:
-    - pip install src/requirements.txt
+    - pip install -r src/requirements.txt
     - python src/main.py
   artifacts:
     paths:
