what about the whole folder?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,5 +28,6 @@ generate-resumes:
       - resume-simple.pdf
       - dist/resume.pdf
       - dist/resume-simple.pdf
+      - dist/
   dependencies:
     - generate-sources
