feat: python takes template as arg

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ generate-sources:
   image: python:3.8
   script:
     - pip install -r src/requirements.txt
-    - python src/main.py
+    - python src/main.py resume
+    - python src/main.py resume-simple
   artifacts:
     paths:
       - dist/
