ci: only execute deploy on master
Can now protect the SSHPASS gitlab-ci variable

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,9 @@ generate-resumes:
 
 deploy:
   stage: deploy
+  only:
+    refs:
+      - master
   script:
-    - echo $SSHPASS
+    - apt-get update -qq && apt-get install -y -qq sshpass
     - sshpass -e scp -o stricthostkeychecking=no dist/*.pdf sh3292@tux.cs.drexel.edu:~/public_html/
