refactor: move cls file to resources
Doesn't make sense to put mcdowell in archive as it is used

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ generate-resumes:
   stage: build
   image: blang/latex:ubuntu
   script:
-    - cp archive/mcdowellcv.cls dist
+    - cp resources/mcdowellcv.cls dist
     - cd dist
     - lualatex resume.tex
     - lualatex resume-simple.tex
