--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,35 @@ variables:
   S3_BUCKET_NAME: saffat-bucket
 
 stages:
-  - temp
+  - check
   - generate-source
   - build
   - deploy
+
+check-python:
+  image: python:3.8
+  stage: check
+  script:
+    - pip install -r src/requirements.txt
+    - pylint src/
+
+check-terraform:
+  # https://matavelli.io/posts/2020/01/setup-gitlab-ci-with-terraform/
+  stage: check
+  image:
+    name: hashicorp/terraform
+    entrypoint:
+      - /usr/bin/env
+      - "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+  before_script:
+    - cd terraform/
+    - terraform init
+  script:
+    - terraform validate
+  cache:
+    key: terraform
+    paths:
+      - terraform/.terraform
 
 generate-sources:
   stage: generate-source
@@ -36,26 +61,6 @@ generate-resumes:
   dependencies:
     - generate-sources
 
-terraform:
-  # https://matavelli.io/posts/2020/01/setup-gitlab-ci-with-terraform/
-  stage: temp
-  image:
-    name: hashicorp/terraform
-    entrypoint:
-      - /usr/bin/env
-      - "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-  before_script:
-    - cd terraform/
-  script:
-    - terraform init
-    - terraform validate
-    - terraform plan --out plan
-    # - terraform apply --auto-approve plan
-  cache:
-    key: terraform
-    paths:
-      - terraform/.terraform
-
 deploy-to-tux:
   stage: deploy
   only:
@@ -64,6 +69,29 @@ deploy-to-tux:
   script:
     - apt-get update -qq && apt-get install -y -qq sshpass
     - sshpass -e scp -o stricthostkeychecking=no dist/*.pdf $DEPLOY_USER@$DEPLOY_URL:$DEPLOY_PATH
+
+create-bucket:
+  # https://matavelli.io/posts/2020/01/setup-gitlab-ci-with-terraform/
+  stage: deploy
+  only:
+    refs:
+      - master
+  image:
+    name: hashicorp/terraform
+    entrypoint:
+      - /usr/bin/env
+      - "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+  before_script:
+    - cd terraform/
+    - terraform init
+  script:
+    - terraform validate
+    - terraform plan --out plan
+    - terraform apply --auto-approve plan
+  cache:
+    key: terraform
+    paths:
+      - terraform/.terraform
 
 deploy-to-s3:
   stage: deploy
@@ -74,3 +102,5 @@ deploy-to-s3:
   script:
     - pip install awscli
     - aws s3 cp ./dist s3://$S3_BUCKET_NAME/ --recursive --exclude "*" --include "*.pdf"
+  dependencies:
+    - create-bucket
