add deploy-prereq stage
jobs in gitlab ci in the same stage are run in parallel
therefore we cannot create the bucket and deploy to it
in the same stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
   - check
   - generate-source
   - build
+  - deploy-prereq
   - deploy
 
 check-python:
@@ -72,7 +73,7 @@ deploy-to-tux:
 
 create-bucket:
   # https://matavelli.io/posts/2020/01/setup-gitlab-ci-with-terraform/
-  stage: deploy
+  stage: deploy-prereq
   only:
     refs:
       - master
