--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,6 +102,8 @@ deploy-to-s3:
   image: python:latest
   script:
     - pip install awscli
-    - aws s3 cp ./dist s3://$S3_BUCKET_NAME/ --recursive --exclude "*" --include "*.pdf"
+    - ls
+    - pwd
+    - aws s3 cp ./dist/*.pdf s3://$S3_BUCKET_NAME/
   dependencies:
     - create-bucket
