--- a/resources/data.yml
+++ b/resources/data.yml
@@ -7,7 +7,7 @@ contact:
     zip: 19104
   phone: (347) 604-5831
   email: saffathasan@gmail.com
-  repo: www.gitlab.com/saffathasan
+  repo: gitlab.com/saffathasan | github.com/saffathasan
   linkedin: linkedin.com/in/saffat-hasan
 
 education:
