data: remove phone number

--- a/resources/data.yml
+++ b/resources/data.yml
@@ -5,7 +5,7 @@ contact:
     city: Philadelphia
     state: PA
     zip: 19104
-  phone: (347) 604-5831
+  phone: (xxx) xxx-xxxx
   email: saffathasan@gmail.com
   repo: gitlab.com/saffathasan | github.com/saffathasan
   linkedin: linkedin.com/in/saffat-hasan
