--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,23 @@ jobs:
       - name: upload generated pdf
         uses: actions/upload-artifact@v2
         with:
-          name: generate-sources-artifacts
+          name: generate-pdf-artifacts
           path: dist/
+
+  deploy-to-github-pages:
+    runs-on: ubuntu-latest
+    needs: generate-resume
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: copy artifact from generate-pdf-artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: generate-pdf-artifacts
+          path: publish/
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: publish/ # The folder the action should deploy.
