--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: generate-sources-artifacts
-          path: dist/
+          path: dist/*.tex
 
   generate-resume:
     runs-on: ubuntu-latest
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: generate-pdf-artifacts
-          path: dist/
+          path: dist/*.pdf
 
   deploy-to-github-pages:
     runs-on: ubuntu-latest
