feat: split github/gitlab

--- a/resources/data.yml
+++ b/resources/data.yml
@@ -7,7 +7,8 @@ contact:
     zip: 19104
   phone: (xxx) xxx-xxxx
   email: saffathasan@gmail.com
-  repo: gitlab.com/saffathasan & github.com/saffathasan
+  github: github.com/saffathasan
+  gitlab: gitlab.com/saffathasan
   linkedin: linkedin.com/in/saffat-hasan
 
 education:
