data: update address

--- a/resources/data.yml
+++ b/resources/data.yml
@@ -1,10 +1,10 @@
 contact:
   name: Saffat Hasan
   address:
-    line1: 311 N 33rd St
-    city: Philadelphia
-    state: PA
-    zip: 19104
+    line1: xxx
+    city: New York
+    state: NY
+    zip: 11423
   phone: (xxx) xxx-xxxx
   email: saffathasan@gmail.com
   github: github.com/saffathasan
