--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,3 +57,26 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: publish/ # The folder the action should deploy.
+
+  deploy-to-drexel:
+    runs-on: ubuntu-latest
+    needs: generate-resume
+    if: github.ref == 'refs/head/main'
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: copy artifact from generate-pdf-artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: generate-pdf-artifacts
+          path: publish/
+
+      - name: Deploy to tux.cs.drexel.edu
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          ARGS: "--recursive --times --compress --verbose --omit-dir-times"
+          SOURCE: "publish/"
+          REMOTE_HOST: tux.cs.drexel.edu
+          REMOTE_USER: sh3292
+          TARGET: public_html/
