--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Deploy
 on: [push]
 
 jobs:
-  generate-sources:
+  gen-tex-files:
     runs-on: ubuntu-latest
     container: python:3.8
     steps:
@@ -14,19 +14,19 @@ jobs:
       - name: upload generated latex
         uses: actions/upload-artifact@v2
         with:
-          name: generate-sources-artifacts
+          name: gen-tex-files-artifacts
           path: dist/*.tex
 
-  generate-resume:
+  generate-pdf-files:
     runs-on: ubuntu-latest
     container: blang/latex:ubuntu
-    needs: generate-sources
+    needs: gen-tex-files
     steps:
       - uses: actions/checkout@v2
-      - name: copy artifact from generate-sources-artifacts
+      - name: copy artifact from gen-tex-files-artifacts
         uses: actions/download-artifact@v2
         with:
-          name: generate-sources-artifacts
+          name: gen-tex-files-artifacts
           path: dist/
       - run: cp resources/mcdowellcv.cls dist
       - run: lualatex resume.tex
@@ -41,7 +41,7 @@ jobs:
 
   deploy-to-github-pages:
     runs-on: ubuntu-latest
-    needs: generate-resume
+    needs: generate-pdf-files
     if: github.ref == 'refs/head/main'
 
     steps:
@@ -60,7 +60,7 @@ jobs:
 
   deploy-to-drexel:
     runs-on: ubuntu-latest
-    needs: generate-resume
+    needs: generate-pdf-files
     if: github.ref == 'refs/head/main'
 
     steps:
