--- a/resources/data.yml
+++ b/resources/data.yml
@@ -7,8 +7,8 @@ contact:
     zip: 11423
   phone: (xxx) xxx-xxxx
   email: saffathasan@gmail.com
-  github: github.com/saffathasan
-  gitlab: gitlab.com/saffathasan
+  github: github.com/SaffatHasan
+  gitlab: gitlab.com/SaffatHasan
   linkedin: linkedin.com/in/saffat-hasan
 
 education:
@@ -33,19 +33,23 @@ experience:
     title: Software Engineer
     duration: Apr 2020 - Present
     summary_items:
+      - Developed incremental deployment strategies to drive service mesh adoption using Gloo
+      - Refactored Jenkins library to use K8s native pipeline (Tekton) for speed \& scalability
       - Wrote presigned URL generator Lambda emphasizing JSON Schema for contract validation
-      - Explored cloud architectural patterns to support on-prem and cloud deployments
-      - Created proof of concept leveraging Gloo for centralized network traffic configuration
-      - Lead intern project using TDD and automated deployment patterns with GitOPS
+      - Lead intern project using TDD and automated deployment/management patterns with GitOPS/ArgoCD
     skills:
+      - Go
       - Kubernetes
+      - EKS
+      - AWS Lambda
       - OpenShift
       - Gitlab CI
-      - AWS Lambda \& EKS
+      - Tekton CI
+      - ArgoCD
       # - S2I \& BuildPacks
-      - Node.js
-      - Angular
-      - Express
+      # - Node.js
+      # - Angular
+      # - Express
 
   - employer: Lockheed Martin
     location: Moorsetown, NJ
@@ -84,7 +88,7 @@ experience:
 
 projects:
   - name: This Resume
-    url: https://gitlab.com/saffathasan/resume
+    url: https://github.com/SaffatHasan/resume
     duration: Sept 2020 - Present
     summary_items:
       - Automatically deploy master using ssh and rsync
@@ -143,14 +147,14 @@ skills:
   proficient:
     - Java
     - Python
+    - Go
     - Unix
     - Git
     - SQL
     - JavaScript
     - Maven
+    - Tekton
     - Flask
-    - Pytest
-    - Pylint
     - HTML/CSS
   familiar:
     - C++
