--- a/resources/data.yml
+++ b/resources/data.yml
@@ -34,7 +34,8 @@ experience:
     duration: Apr 2020 - Present
     summary_items:
       - Developed incremental deployment strategies to drive service mesh adoption using Gloo
-      - Refactored Jenkins library to use K8s native pipeline (Tekton) for speed \& scalability
+      - Refactored Jenkins library to use K8s native pipeline (Tekton) for efficiency, speed, \& scalability
+      - Delivered authentication GRPC Service conforming to Envoy's extauthz interface to encapsulate custom auth logic
       - Wrote presigned URL generator Lambda emphasizing JSON Schema for contract validation
       - Lead intern project using TDD and automated deployment/management patterns with GitOPS/ArgoCD
     skills:
@@ -58,7 +59,7 @@ experience:
     summary_items:
       - Transitioned computer program into Git from Clearcase including training and best practices
       - Incorporated automated testing using Google Test, JUnit, and Maven framework through feature toggles
-      - Reduced build time by decomposing product through discussions about architecture with project leads
+      - Sped up build time 40\% by decomposing product through discussions about architecture with project leads
       - Integrated build into Jenkins pipeline to automate deployment, SCA, and testing on every deliverable
     skills:
       - Maven
@@ -91,7 +92,7 @@ projects:
     url: https://github.com/SaffatHasan/resume
     duration: Sept 2020 - Present
     summary_items:
-      - Automatically deploy master using ssh and rsync
+      - Automatically deploy main branch to multiple targets ssh-deploy and gh-pages-deploy
       - Decouple data from style enabling multi-format generation using single YAML source
       - Generate PDF using LaTeX wrapped in Docker and Python templating engine
     skills:
@@ -99,13 +100,13 @@ projects:
       - LaTeX
       - Docker
       - Gitlab CI
+      - Github Action
   - name: Film Rating Microservice POC
     url: https://gitlab.com/saffathasan/se572
     duration: June - Aug 2020
     summary_items:
-      - Architected simple yet highly decoupled IMDB clone
-      - Designed each service to be independently deployable
-      - Created web and client service consumers
+      - Architected simple yet highly decoupled IMDB clone with independently deployable services
+      - Created web and client service consumers with centralized authorization pattern
     skills:
       - Flutter
       - GraphQL
