--- a/resources/data.yml
+++ b/resources/data.yml
@@ -63,7 +63,7 @@ experience:
 
   - employer: Lockheed Martin
     location: Moorsetown, NJ
-    title: Software Engineering COOP
+    title: Software Engineering Coop
     duration: Apr - Sept 2019
     summary_items:
       - Transitioned computer program into Git from Clearcase including training and best practices
